--- a/sources/_VS/PanelOSC/PanelOSC.vcxproj
+++ b/sources/_VS/PanelOSC/PanelOSC.vcxproj
@@ -71,7 +71,7 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>..\..\libs\common\_VS;..\..\Panel\src;..\..\libs\STM32Cube_F4\Drivers\CMSIS\Device\ST\STM32F4xx\Include;..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc;..\..\libs\STM32Cube_F4\Drivers\CMSIS\Include;..\..\Panel\src\libs;..\..\libs\common</IncludePath>
+    <IncludePath>..\..\Panel\src;..\..\Panel\src\libs\HAL;..\..\libs\common;..\..\libs\common\_VS;..\..\libs\STM32Cube_F4\Drivers\CMSIS\Device\ST\STM32F4xx\Include;..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc;..\..\libs\STM32Cube_F4\Drivers\CMSIS\Include</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>.\x64\Debug</OutDir>
@@ -88,10 +88,10 @@
       <WarningLevel>EnableAllWarnings</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>WIN32;USE_HAL_DRIVER;STM32F429xx;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>WIN32;USE_HAL_DRIVER;STM32F429xx;MSVC;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>-MP %(AdditionalOptions)</AdditionalOptions>
       <MinimalRebuild>false</MinimalRebuild>
-      <DisableSpecificWarnings>4514;4820</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4068;4514;4820</DisableSpecificWarnings>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -129,6 +129,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\libs\common\_VS\cmsis_armcc.h" />
+    <ClInclude Include="..\..\libs\common\_VS\cmsis_armcc_V6.h" />
+    <ClInclude Include="..\..\libs\common\_VS\core_cm4.h" />
+    <ClInclude Include="..\..\libs\common\_VS\core_cmFunc.h" />
+    <ClInclude Include="..\..\libs\common\_VS\core_cmInstr.h" />
+    <ClInclude Include="..\..\libs\common\_VS\core_cmSimd.h" />
     <ClInclude Include="..\..\libs\common\_VS\ctype.h" />
     <ClInclude Include="..\..\libs\common\_VS\integer.h" />
     <ClInclude Include="..\..\libs\common\_VS\inttypes.h" />
@@ -154,8 +160,6 @@
     <ClInclude Include="..\..\Panel\src\Hardware\Timer.h" />
     <ClInclude Include="..\..\Panel\src\Keyboard\Controls.h" />
     <ClInclude Include="..\..\Panel\src\Keyboard\Keyboard.h" />
-    <ClInclude Include="..\..\Panel\src\libs\stm32f4xx_hal_conf.h" />
-    <ClInclude Include="..\..\Panel\src\libs\stm32f4xx_it.h" />
     <ClInclude Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
@@ -192,6 +196,8 @@
     <ClInclude Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Inc\stm32f4xx_hal_tim_ex.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClInclude>
+    <ClInclude Include="..\..\Panel\src\libs\HAL\stm32f4xx_hal_conf.h" />
+    <ClInclude Include="..\..\Panel\src\libs\HAL\stm32f4xx_it.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\Panel\src\Display\Display.cpp" />
@@ -202,11 +208,11 @@
     <ClCompile Include="..\..\Panel\src\Hardware\Hardware.cpp" />
     <ClCompile Include="..\..\Panel\src\Hardware\Timer.cpp" />
     <ClCompile Include="..\..\Panel\src\Keyboard\Keyboard.cpp" />
-    <ClCompile Include="..\..\Panel\src\libs\stm32f4xx_hal_msp.c" />
-    <ClCompile Include="..\..\Panel\src\libs\stm32f4xx_it.c" />
-    <ClCompile Include="..\..\Panel\src\libs\system_stm32f4xx.c">
+    <ClCompile Include="..\..\Panel\src\libs\CMSIS\system_stm32f4xx.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="..\..\Panel\src\libs\HAL\stm32f4xx_hal_msp.c" />
+    <ClCompile Include="..\..\Panel\src\libs\HAL\stm32f4xx_it.c" />
     <ClCompile Include="..\..\Panel\src\main.cpp" />
     <ClCompile Include="..\..\libs\STM32Cube_F4\Drivers\STM32F4xx_HAL_Driver\Src\stm32f4xx_hal.c">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
@@ -247,11 +253,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\libs\common\_VS\algorithm" />
+    <None Include="..\..\libs\common\_VS\cstdlib" />
+    <None Include="..\..\libs\common\_VS\cstring" />
+    <None Include="..\..\libs\common\_VS\limits" />
     <None Include="..\..\Panel\src\Display\font\font5.inc" />
     <None Include="..\..\Panel\src\Display\font\font8.inc" />
     <None Include="..\..\Panel\src\Display\font\fontUGO.inc" />
     <None Include="..\..\Panel\src\Display\font\fontUGO2.inc" />
-    <None Include="..\..\Panel\src\libs\startup_stm32f429xx.s" />
+    <None Include="..\..\Panel\src\libs\CMSIS\startup_stm32f429xx.s">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
+    </None>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
